--- a/Frontend/src/main/resources/web/zul/pay.zul
+++ b/Frontend/src/main/resources/web/zul/pay.zul
@@ -2,6 +2,6 @@
     <div width="400px" height="400px" style="margin: auto">
 <!--        <button label="FIZETÉS" onClick="@command('pay')"/>-->
         <label value="Ez a fizetés oldala. Itt lehetne fizetni." />
-        <a href="/logout">Kilépés</a>
+        <a href="/userReservations">Tovább</a>
     </div>
 </zk>
